syntax = "proto3";

package flight_booking;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";

service RPCClient {
    rpc FindById(ClientParamId) returns (Client);
    rpc CreateClient(Client) returns (Client);
    rpc UpdateClient(Client) returns (Client);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc SearchClient(SearchClientRequest) returns (SearchClientResponse);
}

message ClientParamId {
    string id = 1;
}

message Client {
    string id = 1;
    int32 role = 2;
    string name = 3;
    string email = 4;
    string phone_number = 5;
    string date_of_bith = 6;
    string identity_card = 7;
    string address = 8;
    string membership_card = 9;
    string password = 10;
    int32 status = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
}

message SearchClientRequest {
    string name = 1;
    string email = 2;
    string phone_number = 3;
    string identity_card = 4;
}

message SearchClientResponse {
    repeated Client client = 1;
}

message ChangePasswordRequest {
    string client_id = 1;
    string old_password = 2;
    string new_password = 3;
    string confirm_password = 4;
}

message ChangePasswordResponse {
    int32 code = 1;
    string message = 2;
}